<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_setup"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_setup_description"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textAlignment="center"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_new_key"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnImport"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_key" />

    

</androidx.constraintlayout.widget.ConstraintLayout>